dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
  name: external-auth-oauth2
  namespace: kube-system
spec:
  rules:
  - host: sdp-k8s-proxy.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
        path: /
      #- backend:
        #  serviceName: oauth2-proxy
        #  servicePort: 4180
        #path: /oauth2
     
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
spec:
  rules:
  - host: sdp-k8s-proxy.northeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
#tls:
#- hosts:
#  - sdp-k8s-proxy.northeurope.cloudapp.azure.com
